dmsdk-ios/2.2.1/更新日志.md
# 更新日志

本文档提供了更新日志和迁移指南。

## 2.2.1

### 变更内容

 * 兼容低版本XCode编译环境及x86_64和armv7架构运行环境
 * QQ音乐授权SDK registerAppID接口增加packageName参数
 * 修复Web模块cookies异常问题

## 2.2.0

### 变更内容

 * 新增QQ音乐拉起授权
 * 各模块提高网络请求稳定性
 * 临时变更了构建环境

### 迁移指南

**该版本需要使用Xcode 11及以上版本才能正常构建，我们会在后续的版本中恢复对旧版本Xcode构建工具的支持。**

`TVSEnvironment`的`serverEnv`和`serverReqTimeout`属性被合并到`netConfig`属性中，需要设置环境时，需改为：

```objective-c
[TVSEnvironment shared].netConfig.serverEnv = TVSServerEnvFormal;
```

## 2.1.1

&emsp;&emsp;TVSAuthDelegate 新增 QQ 验票回调。

## 2.1.0

&emsp;&emsp;账号模块新增根据指定用户 openId 查询 UserInfo 接口；
&emsp;&emsp;技能服务模块新增闹钟管理、儿童模式、设备控制、第三方授权接口；
&emsp;&emsp;账号模块支持注入账号信息，支持第三方账号；
&emsp;&emsp;TSKM 请求回调增加错误码；
&emsp;&emsp;H5 模块新增注入额外信息接口;
&emsp;&emsp;设备模块新增数据更新接口；
&emsp;&emsp;修复设备查询 guid 被覆盖问题；
&emsp;&emsp;修复获取 TVSID 接口问题；
&emsp;&emsp;修复 H5 cookie 问题。

## 2.0.1

&emsp;&emsp;H5 模块新增链接加载拦截回调；
&emsp;&emsp;H5 模块新增智能家居页面；
&emsp;&emsp;修复日志模块重复初始化问题；
&emsp;&emsp;新增 armv7/armv7s/i386 架构。

## 2.0.0

&emsp;&emsp;模块化拆分，核心模块(环境配置/账号/设备绑定)为必须，H5 等模块根据需要可选；
&emsp;&emsp;H5 模块由 `ViewController` 页面改为 `WebView` 组件形式，可定制化程度更高；
&emsp;&emsp;H5 模块支持自己实现账号授权（不调用此 SDK 做登录和刷票）；
&emsp;&emsp;新增二维码模块，用于无屏设备账号授权。

### 1 1.0至2.0.0迁移指南

#### 1.1 项目配置变更

v2.0.0+ SDK做了模块化拆分，详细配置参考[接入指南](/doc/page/276)。

### 2 API 变更

#### 2.1 字符串替换

除 H5 模块外，其他模块主要是类名/方法名/参数名等变更，直接替换即可。

**头文件**

| v1.0                             | v2.0.0+                    |
| -------------------------------- | -------------------------- |
| <TVSAccountSDK/TVSAccountSDK.h>  | <TVSCore/TVSCore.h>        |
| <TVSAccountSDK/TVSEmvironment.h> | <TVSCore/TVSEmvironment.h> |
| <TVSAccountSDK/TVSAccount.h>     | <TVSCore/TVSAuth.h>        |
| <TVSAccountSDK/TVSDeviceBind.h>  | <TVSCore/TVSDevice.h>      |
| <TVSAccountSDK/TVSMember.h>      | <TVSMember/TVSMember.h>    |
| <TVSAccountSDK/TVSWebPage.h>     | <TVSWeb/TVSWeb.h>          |
| <TVSAccountSDK/TVSTSKM.h>        | <TVSTSKM/TVSTSKMProxy.h>   |
| <TVSAccountSDK/TVSOCMS.h>        | <TVSSpeech/TVSSpeech.h>    |

**类名**

| v1.0          | v2.0.0+          |
| ------------- | ---------------- |
| TVSPushDevice | TVSDeviceInfo    |
| TVSAccount    | TVSAuthManager   |
| TVSDeviceBind | TVSDeviceManager |
| TVSOCMS       | TVSSpeech        |
| TVSTSKM       | TVSTSKMProxy     |

**属性名**

| v1.0 | v2.0.0+ |
| ---- | ------- |
| .DSN | .dsn    |

**方法名**

| 类             | v1.0                                                         | v2.0.0+                                                      |
| -------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
| TVSAccountInfo | +(NSString*)clientIdWithDSN:(NSString*)dsn productId:(NSString*)productId; | +(NSString*)clientIdWithProductId:(NSString*)productId dsn:(NSString*)dsn; |
| TVSMember      | -(instancetype)initWithDeviceType:(NSString*)deviceType deviceOEM:(NSString*)deviceOEM productId:(NSString*)productId DSN:(NSString*)dsn; | -(instancetype)initWithDeviceProductId:(NSString*)productId dsn:(NSString*)dsn; |
| TVSSpeech      | -(void)getDeviceAISpeechWithDeviceGUID:(NSString*)deviceGUID productId:(NSString*)productId DSN:(NSString*)dsn handler:(void(^)(TVSAISpeechItem*))handler; | -(void)getDeviceAISpeechWithProductId:(NSString*)productId dsn:(NSString*)dsn handler:(void(^)(TVSAISpeechItem*))handler; |
| TVSSpeech      | -(void)setDeviceAISpeechId:(NSString*)speechID productId:(NSString*)productId DSN:(NSString*)dsn handler:(void(^)(BOOL))handler; | -(void)setDeviceAISpeechId:(NSString*)speechID productId:(NSString*)productId dsn:(NSString*)dsn handler:(void(^)(BOOL))handler; |
| TVSTSKM        | +(instancetype)shared;                                       | -(instancetype)initWithDeviceInfo:(TVSDeviceInfo*)deviceInfo accountInfo:(TVSAccountInfo*)accountInfo; |

#### 2.2 H5 模块

H5 模块做了较大改动。

原来是封装的 `TVSWebViewController`，仅通过 `TVSWebPage` 提供跳转接口；虽然接入方便，但存在以下两个问题：

&emsp;&emsp;1.&emsp;导航栏适配问题；
&emsp;&emsp;2.&emsp;无法满足非全屏的场景；

因此，新版本拆分出 `TVSWebView`，既与导航栏解耦，也满足非全屏场景。

具体接入流程可参考 [demo](https://github.com/TencentDingdang/dmsdk/blob/master/demo/iOS/TVSAccountDemo/TVSAccountDemo/BrowserVC.m) 和 [API文档](API文档/目录.md)。

## 1.0

&emsp;&emsp;提供基本的账号授权、设备绑定、H5 等功能。